--- a/Demo/GrovePeak/www/scss/fonts.scss
+++ b/Demo/GrovePeak/www/scss/fonts.scss
@@ -1,10 +1,22 @@
 
 @font-face {
     font-family: NationalRegular;
-    src: url(Fonts/National-Regular.otf);
+    src: url(Fonts/NationalTest-Regular.otf);
+}
+
+@font-face {
+    font-family: NationalBold;
+    src: url(Fonts/National-Bold.otf);
 }
 
 @font-face {
     font-family: NationalBook;
     src: url(Fonts/National-Book.otf);
 }
+
+@font-face {
+    font-family: GP;
+    src: url(Fonts/NationalTest-Regular.otf);
+}
+
+
