--- a/Demo/GrovePeak/www/scss/main.scss
+++ b/Demo/GrovePeak/www/scss/main.scss
@@ -51,6 +51,7 @@
                 min-height: 100%;
                 box-sizing: border-box;
                 background: $primary-bg;
+                overflow-x: hidden;
             }
 
     #overlay {
