--- a/Demo/GrovePeak/www/scss/footer.scss
+++ b/Demo/GrovePeak/www/scss/footer.scss
@@ -28,12 +28,14 @@
 
      background-color: $primary-bg;
      color: #FFF;
+
+     font-family: NationalRegular;
  }
 
     #footer-contact {
         position: absolute;
         top: 20%; left: 0;
-        width: auto; height: 60%;
+        width: auto; height: auto;
         margin-left: 24px;
         box-sizing: border-box;
     }
@@ -53,6 +55,14 @@
         color: #FFF;
         font-weight: bold;
         font-family: NationalRegular;
+        a {
+            color: #FFF;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        a:hover {
+            color: #3EC0FF;
+        }
     }
 
     #footer-contact-number {
@@ -61,5 +71,13 @@
         color: #FFF;
         font-weight: bold;
         font-family: NationalRegular;
+        a {
+            color: #FFF;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        a:hover {
+            color: #3EC0FF;
+        }
     }
 
