--- a/Demo/GrovePeak/www/scss/content.scss
+++ b/Demo/GrovePeak/www/scss/content.scss
@@ -47,8 +47,8 @@
 
     #content-landscape {
         position: absolute;
-        left: -15%; bottom: $footer-height;
-        width: 130%; height: $footer-height;
+        left: -5%; bottom: $footer-height;
+        width: 110%; height: auto;
    //    max-height: $footer-height;
         margin: 0; padding: 0;
         box-sizing: border-box;
