--- a/Demo/GrovePeak/www/css/main.css
+++ b/Demo/GrovePeak/www/css/main.css
@@ -285,7 +285,6 @@ body {
   height: auto;
   padding-top: 20vh;
   min-height: 100vh;
-  box-sizing: border-box;
   box-sizing: border-box; }
 
 .content-section {
@@ -313,7 +312,7 @@ hr {
   width: 100%;
   height: auto;
   padding: 0px 12px;
-  margin-bottom: 12; }
+  margin-bottom: 24px; }
 
 .section-inner p {
   margin-bottom: 18px;
@@ -399,7 +398,7 @@ h3 {
 #profile {
   position: relative;
   float: left;
-  margin: 0;
+  margin: 0px 0px 12px 0px;
   padding: 0;
   box-sizing: border-box;
   width: 100%;
@@ -435,17 +434,17 @@ h3 {
  */
 #arrow-image {
   position: absolute;
-  top: 15%;
+  top: 20%;
   right: 1%;
-  width: 25%;
+  width: 20.5%;
   height: auto;
   display: none; }
 
 #dollar-image {
   position: absolute;
-  top: 40%;
+  top: 50%;
   right: 1%;
-  width: 14%;
+  width: 10%;
   height: auto;
   display: none; }
 
@@ -488,10 +487,10 @@ h3 {
 
 @media (min-width: 768px) {
   #content-landscape {
-    left: 0%;
-    width: 100%;
-    height: 22.5vh;
-    bottom: 15vh; }
+    left: -2.5%;
+    width: 105%;
+    bottom: 15vh;
+    margin-top: 24px; }
   #content {
     margin-bottom: 15vh; }
   .section-inner, #content-header, h1, hr {
@@ -520,13 +519,13 @@ h3 {
     line-height: 22px; }
   #dollar-image {
     display: block;
-    width: 19%;
-    right: 10%;
-    top: 40%; }
+    width: 16%;
+    right: 11.5%;
+    top: 60%; }
   #arrow-image {
     display: block;
-    width: 27%;
-    right: 2.5%; }
+    width: 21%;
+    right: 3.5%; }
   #contact-el {
     display: block; }
   #profile-text {
@@ -551,13 +550,13 @@ h3 {
     line-height: 22px; }
   #dollar-image {
     display: block;
-    width: 20%;
+    width: 15%;
     right: 14%;
-    top: 40%; }
+    top: 47%; }
   #arrow-image {
     display: block;
-    width: 30%;
-    right: 5%; }
+    width: 20%;
+    right: 11%; }
   #contact-el {
     display: block;
     left: 64vw; }
@@ -565,11 +564,14 @@ h3 {
     font-size: 18px;
     line-height: 18px; } }
 
-/*@media (min-width: $screen-wide) {
-        #content-landscape {
-            left: 0%;
-            width:  100%;
-            height: ($footer-height * 2);
-            bottom: $footer-height;
-        }
-    }*/
+@media (min-width: 1200px) {
+  #dollar-image {
+    display: block;
+    width: 14%;
+    right: 14%;
+    top: 50%; }
+  #content-landscape {
+    left: 0%;
+    width: 100%;
+    height: 30vh;
+    bottom: 15vh; } }
