--- a/Demo/GrovePeak/www/scss/content.scss
+++ b/Demo/GrovePeak/www/scss/content.scss
@@ -65,7 +65,6 @@
     //    padding-bottom: $footer-height;
     //    padding: 12px 0px 0px 0px;        
      //   border: 2px solid #FF0;
-        box-sizing: border-box;
     }
         
         .content-section {
@@ -100,7 +99,7 @@
         //    display: none;
         //    opacity: 0.01;
             padding: 0px 12px;
-            margin-bottom: 12;
+            margin-bottom: 24px;
         }
 
             .section-inner p {
@@ -200,7 +199,7 @@
     position: relative;
     float: left;
 
-    margin: 0;
+    margin: 0px 0px 12px 0px;
     padding: 0;
 
     box-sizing: border-box;
