--- a/Demo/GrovePeak/www/scss/responsive.scss
+++ b/Demo/GrovePeak/www/scss/responsive.scss
@@ -54,12 +54,13 @@
     //        padding-top: 11vh;
     //    }
         #content-landscape {
-            left: 0%;
-            width:  100%;
-            height: ($footer-height * 1.5);
+            left: -2.5%;
+            width:  105%;
+            //height: ($footer-height * 1.5);
 
             //height: auto;
             bottom: $footer-height;
+            margin-top: 24px;
         }
         #content { margin-bottom: $footer-height }
         .section-inner, #content-header, h1, hr {
@@ -94,8 +95,8 @@
 
         .section-inner p { font-size: 20px; line-height: 22px; }
 
-        #dollar-image { display: block; width: 19%; right: 10%; top: 40%; } 
-        #arrow-image { display: block; width: 27%; right: 2.5%; }
+        #dollar-image { display: block; width: 16%; right: 11.5%; top: 60%; } 
+        #arrow-image { display: block; width: 21%; right: 3.5%; }
 
         #contact-el { display: block; }
 
@@ -118,20 +119,21 @@
         }
         .section-inner p { font-size: 20px; line-height: 22px; }
 
-        #dollar-image { display: block; width: 20%; right: 14%; top: 40%; } 
-        #arrow-image { display: block; width: 30%; right: 5%; }
+        #dollar-image { display: block; width: 15%; right: 14%; top: 47%; } 
+        #arrow-image { display: block; width: 20%; right: 11%; }
         
         #contact-el { display: block; left: 64vw; }
 
         #profile-text { font-size: 18px; line-height: 18px; }
     }
 
-    /*@media (min-width: $screen-wide) {
+    @media (min-width: $screen-wide) {       
+        #dollar-image { display: block; width: 14%; right: 14%; top: 50%; } 
         #content-landscape {
             left: 0%;
             width:  100%;
             height: ($footer-height * 2);
             bottom: $footer-height;
         }
-    }*/
+    }
 
